--- a/SalesService/appsettings.json
+++ b/SalesService/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=SalesService;Username=postgres;Password=password"
+  },
+  "JwtSettings": {
+    "validIssuer": "SalesApi",
+    "validAudience": "https://localhost:3000",
+    "secretKey": "SECRETKEY1234567SECRETKEY1234567",
+    "expires": "1"
   }
 }
