--- a/src/WebApp/SalesService/appsettings.json
+++ b/src/WebApp/SalesService/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=SalesService;Username=postgres;Password=password"
+    "DefaultConnection": "Host=postgre;Port=5432;Database=SalesService;Username=postgres;Password=password"
   },
   "JwtSettings": {
     "validIssuer": "SalesApi",
