fix: поправил работу с токенами

--- a/src/WebApp/SalesService/appsettings.json
+++ b/src/WebApp/SalesService/appsettings.json
@@ -7,12 +7,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgre;Port=5432;Database=SalesService;Username=postgres;Password=password"
+    //"DefaultConnection": "Host=postgre;Port=5432;Database=SalesService;Username=postgres;Password=password", // container
+    "DefaultConnection": "Host=localhost;Port=5432;Database=SalesService;Username=postgres;Password=password"
   },
   "JwtSettings": {
-    "validIssuer": "SalesApi",
-    "validAudience": "https://localhost:3000",
-    "secretKey": "SECRETKEY1234567SECRETKEY1234567",
-    "expires": "15"
+    "ValidIssuer": "SalesApi",
+    "ValidAudience": "https://localhost:3000",
+    "SecretKey": "SECRETKEY1234567SECRETKEY1234567",
+    "AccessExpiresInMunutes": "1"
   }
 }
